--- a/index.html
+++ b/index.html
@@ -27,5 +27,19 @@
       src="file:/Users/bagjin-eun/Downloads/KakaoTalk_Photo_2023-07-27-08-43-45.jpeg"
       alt="Grapefruit slice atop a pile of other slices"
     />
+    <header>
+      <nav>
+        <lu>
+          <li>list</li>
+          <li>list</li>
+          <li>list</li>
+          <li>list6</li>
+        </lu>
+      </nav>
+    </header>
   </body>
 </html>
+<footer>
+  <address>aaa@aaa.com</address>
+  <p>copyright wlsdmsrnfl@nate.com</p>
+</footer>
