--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <li>list</li>
           <li>list</li>
           <li>list6</li>
+          <li>revert 하기 전입니다</li>
         </lu>
       </nav>
     </header>
