--- a/day01/test01.html
+++ b/day01/test01.html
@@ -18,6 +18,11 @@
         </ul>
       </nav>
     </header>
+
+
+    <div>
+        <hr>
+    </div>
     <section>
       <h2>title1</h2>
       <p>내용입니다1</p>
@@ -43,7 +48,41 @@
       <li>이건은 ol 입니당</li>
       <li>이건은 ol 입니당</li>
     </ol>
+    <ol>
+        순서가 필요할 때 사용하는 태그
+        <ol reversed="reversed" ,start="7"></ol>
+      </ol>
 
+      <span style="color: blueviolet;"> 스펜을 사용하면 글자에 대한 영역입니다  </span>
+      <div id="thisred">
+        ㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁ
+        div 를 사용하면 전체 영역을 선택하게 됩니다 따라서 span 보다 넓은 영역을 선택하게 됩니다
+          <div id="thisgreen">
+              <dl>
+                  <dt>ㅁ</dt>
+                  <dt>ㅁ</dt>
+                  <dt>이곳은 초록색을 사용했습니다</dt>
+                  <dt><a href="http://www.naver.com" title="this is naver">naver 로 가보자고 !!!</a></dt>
+                  <dt><a href="http://www.daum.com">daum 로 가보자고 !!!</a></dt>
+
+                  <dt>ㅁ</dt>
+              </dl>
+          </div>
+      </div>
+
+      <dl>
+          <dt>
+              <dd>제목</dd>
+              <dt>저자</dt>
+              <dd>가격</dd>
+              <dd>ㅎ</dd>
+              <dd>ㅎ</dd>
+              <dt>ㅎ</dt>
+              <dd>ㅎ</dd>
+              <dd>ㅎ</dd>
+  
+          </dt>
+      </dl>
     <article>
       <section>
         <h1></h1>
@@ -72,11 +111,10 @@
           <li>hello</li>
         </ul>
 
-        <ol>
-          순서가 필요할 때 사용하는 태그
-          <ol reversed="reversed" ,start="7"></ol>
-        </ol>
+   
       </body>
     </ul>
+
+    
   </body>
 </html>
