--- a/day01/parctice.html
+++ b/day01/parctice.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
     <header>
-      <img src="KakaoTalk_Photo_2023-07-27-08-43-45.jpeg" alt="신한투자증권" >
+      <img src="KakaoTalk_Photo_2023-07-27-08-43-45.jpeg" alt="신한투자증권" />
     </header>
     <nav>
       <ul>
@@ -24,7 +24,6 @@
       </ul>
     </aside>
     <section>
-      <h2>HTML5 와 css 활용하기</h2>
       <article>
         <h3>html과 css 에 관한 소제목</h3>
         <p>
