--- a/day02/homework.html
+++ b/day02/homework.html
@@ -10,59 +10,100 @@
 
 <body>
 
-    <div id="wapper">
-        <header>
+    <header>
+        <div class="header_warp">
             <h1>홈페이지</h1>
             <h3>안녕하세요. 방문을 환영합니다</h3>
-            <span>
-                <a href="Home">Home</a><a href="Archive">Archive</a><a href="About">About</a><a href="Info">Info</a>
-            </span>
-        </header>
+            <nav class="header_nav">
+                <ul class="header_ul">
+                    <li class="header_links"><a href="">Home</a></li>
+                    <li class="header_links"><a href="">Archive</a></li>
+                    <li class="header_links"><a href="">About</a></li>
+                    <li class="header_links"><a href="">Info</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
 
-        <section>
+    <div class="middle_wrapper">
+
+        <div class="section_wrapper">
             <h2>제목</h2>
             <h4>소제목</h4>
 
-            <article>
-                <h4>아티클제목</h4>
-                <p>
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                </p>
 
-            </article>
-            <article>
-                <h4>아티클제목</h4>
-                <p>
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                    아티클에 대한 내용 들어오는 곳...
-                </p>
-            </article>
-        </section>
+            <section class="article_wrapper">
 
+                <article>
+                    <h4>아티클제목</h4>
+                    <p>
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                    </p>
+                    <footer>
+                        <a href="">comment <span> posted at 2021</span></a>
+                    </footer>
+                </article>
+                <article>
+                    <h4>아티클제목</h4>
+                    <p>
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                        아티클에 대한 내용 들어오는 곳...
+                    </p>
+                </article>
+
+            </section>
+
+        </div>
 
         <aside>
             <nav>
@@ -83,15 +124,15 @@
                 </ul>
             </nav>
         </aside>
-
-        <a href="#">3 Comments posted at 2011-03-20</a>
-
-        <footer>
-            <hr>
-            <h4>Copyright © hello.comp</h4>
-
-        </footer>
     </div>
+
+
+    <footer>
+        <hr>
+        <h4>Copyright © hello.comp</h4>
+
+    </footer>
+
 </body>
 
 </html>
